# nanospec

./: .ghci  .travis.yml  LICENSE  README  ci.yaml  nanospec.cabal  package.yaml
example/: Spec.hs
src/Test/: Hspec.hs
test/Test/: HspecSpec.hs
