name:             nanospec
version:          0.1.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

library
  exposed:
      False
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec
  build-depends:
      base

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src, test
  main-is:
      Test/HspecSpec.hs
  build-depends:
      base
    , hspec >= 1.3
    , silently
